plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.5' apply false
}

// Common configuration for all subprojects
subprojects {
    apply plugin: 'java'
    apply plugin: 'com.gradleup.shadow'

    group = 'uk.co.clovetwilight3'

    java {
        toolchain.languageVersion.set(JavaLanguageVersion.of(21))
    }

    repositories {
        mavenCentral()
        maven {
            name = 'papermc'
            url = 'https://repo.papermc.io/repository/maven-public/'
        }
        maven {
            name = 'jitpack'
            url = 'https://jitpack.io'
        }
        maven {
            name = 'codemc-snapshots'
            url = 'https://repo.codemc.io/repository/maven-snapshots/'
        }
    }

    dependencies {
        compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
    }

    shadowJar {
        archiveClassifier.set('')
        // Relocate common dependencies to avoid conflicts
        relocate 'com.google.gson', 'uk.co.clovetwilight3.libs.gson'
    }

    tasks.build {
        dependsOn shadowJar
    }

    // Copy all built jars to a central output directory
    tasks.register('copyJar', Copy) {
        dependsOn shadowJar
        from shadowJar.archiveFile
        into "${rootProject.buildDir}/libs"
    }

    build.finalizedBy copyJar
}

// Configure subprojects that depend on clovelib to use compileOnly dependency
configure(subprojects.findAll { it.name in ['estrocord', 'jailedwings', 'wingsync'] }) {
    dependencies {
        compileOnly project(':clovelib')
    }

    // Ensure clovelib compiles first
    tasks.named('compileJava') {
        dependsOn ':clovelib:compileJava'
    }
}

// Task to build all plugins
tasks.register('buildAll') {
    dependsOn subprojects.collect { it.tasks.named('build') }
    doLast {
        println "All plugins built! JARs available in: ${buildDir}/libs"
    }
}